apps/calibre-web/service-lan.yaml
apiVersion: v1
kind: Service
metadata:
  name: calibre-web-lan
  namespace: calibre-web
spec:
  type: NodePort
  selector:
    app: calibre-web
  ports:
  - port: 8083
    targetPort: 8083
    nodePort: 30083
