apps/calibre-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calibre-web
  namespace: calibre-web
spec:
  selector:
    app: calibre-web
  ports:
  - port: 80
    targetPort: 8083
