apps/calibre-web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calibre-web
  namespace: calibre-web
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: calibre-web
      port:
        number: 80
  tls:
  - hosts:
    - calibre-web
